// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot of the base state 1`] = `
<DocumentFragment>
  <div
    class="dse-select"
  >
    <button
      aria-controls="dse-select-list"
      aria-haspopup="true"
      class="dse-select__label"
      data-testid="DseSelectButton"
    >
      <p
        class="dse-text dse-text-base dse-text-normal"
      >
        Select an option
      </p>
      <svg
        class="dse-select__caret dse-select__caret--close"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-width="{1.5}"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.5 8.25l-7.5 7.5-7.5-7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the options menu state 1`] = `
<DocumentFragment>
  <div
    class="dse-select"
  >
    <button
      aria-controls="dse-select-list"
      aria-expanded="true"
      aria-haspopup="true"
      class="dse-select__label"
      data-testid="DseSelectButton"
    >
      <p
        class="dse-text dse-text-base dse-text-normal"
      >
        Select an option
      </p>
      <svg
        class="dse-select__caret dse-select__caret--open"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-width="{1.5}"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.5 8.25l-7.5 7.5-7.5-7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
    <ul
      class="dse-select__overlay"
      id="dse-select-list"
      role="menu"
      style="top: 10px;"
    >
      <li
        aria-checked="0"
        aria-label="Strict Black"
        class="dse-select__option  "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="dse-text dse-text-base dse-text-normal"
        >
          Strict Black
        </p>
      </li>
      <li
        aria-checked="0"
        aria-label="Heavenly Green"
        class="dse-select__option  "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="dse-text dse-text-base dse-text-normal"
        >
          Heavenly Green
        </p>
      </li>
      <li
        aria-checked="0"
        aria-label="Sweet Pink"
        class="dse-select__option  "
        role="menuitemradio"
        tabindex="0"
      >
        <p
          class="dse-text dse-text-base dse-text-normal"
        >
          Sweet Pink
        </p>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`snapshot of the selected option state 1`] = `
<DocumentFragment>
  <div
    class="dse-select"
  >
    <button
      aria-controls="dse-select-list"
      aria-haspopup="true"
      class="dse-select__label"
      data-testid="DseSelectButton"
    >
      <p
        class="dse-text dse-text-base dse-text-normal"
      >
        Strict Black
      </p>
      <svg
        class="dse-select__caret dse-select__caret--close"
        fill="none"
        height="1rem"
        stroke="currentColor"
        stroke-width="{1.5}"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.5 8.25l-7.5 7.5-7.5-7.5"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
